--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sorting your array with CSS magic</title>
+    <!--This document should preferably avoid using backtick '``' as strings such as `abc` will inform the compiler where to insert generated code. To use backtick write '``'.-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,20 +65,39 @@
             text-align: justify;
         }
 
-        p.terminal {
+        pre.terminal, p.terminal {
             padding: 25px;
             border-radius: 7px;
             font-family: 'Ubuntu Mono', sans-serif;
             background-color: var(--color-terminal-bg);
             color: var(--color-terminal-text);
         }
-        p.okay { color: var(--color-terminal-okay); }
-        p.error { color: var(--color-terminal-error); }
+        pre.okay { color: var(--color-terminal-okay); }
+        pre.error { color: var(--color-terminal-error); }
 
         div.animation {
             padding: 30px;
             margin: 1em 0;
             background-color: var(--color-quaternary);
+            margin-bottom: 0;
+
+            width: 990px;
+            height: 440px;
+        }
+
+        button {
+            margin-top: 0;
+            margin-bottom: 1em;
+            width: inherit;
+            border: 0;
+            font: inherit;
+            color: var(--color-background);
+            background: linear-gradient(88deg, var(--color-primary), var(--color-secondary));
+            padding: 25px;
+            letter-spacing: 0.03em;
+            font-weight: 700;
+            text-transform: uppercase;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -85,23 +105,45 @@
     <div id="page">
         <h1>Sorting your array with <span>CSS</span> magic</h1>
         <p>What you can see below is pure CSS integer array sorting; if the compilation went well. (Well, there's a button, which uses JS, to reload the animation but the sorting and animation themselves are done with pure CSS.) So, sit tight and enjoy your browser doing excessive work to sort an array of a few numbers. By the way, this page has been generated with my handcrafted compiler. It takes a file with an array of integers as input and gives the HTML and CSS which sort the array as output. The compiler uses bubble sort as for now.</p>
-        <p class="terminal">
-            Hello, world!
-        </p>
-        <p class="terminal error">
-            What the fuck?
-        </p>
-        <p class="terminal okay">
-            Everything is going to be okay...
-        </p>
+        <pre class="terminal okay">Compilation successful. Sorting now...</pre>
+
         <h2>The sorting itself</h2>
-        Unsorted array
         <p class="terminal">3 1 4 1 5 9 2 6 5 3</p>
-        Sorted array
         <p class="terminal">1 1 2 3 3 4 5 5 6 9</p>
         <div class="animation">
             Animation goes here
         </div>
+        <button>Reload</button>
+
+        <h2>The pivotal code</h2>
+<pre class="terminal"> /* bubble sort */
+:root {
+    /* ... actual code goes here ... */
+    --a0: 3;
+    --a1: 1;
+    --a2: 4;
+
+    --t0x0: var(--a0);
+    --t0x1: var(--a1);
+    --t0x2: var(--a2);
+
+    --t1x0: min(var(--t0x0), var(--t0x1));
+    --t1x1: max(var(--t0x0), var(--t0x1));
+    --t1x2: var(--t0x2);
+
+    --t2x0: var(--t1x0);
+    --t2x1: min(var(--t1x1), var(--t1x2));
+    --t2x2: max(var(--t1x1), var(--t1x2));
+
+    --t3x0: min(var(--t2x0), var(--t2x1));
+    --t3x1: max(var(--t2x0), var(--t2x1));
+    --t3x2: var(--t2x2);
+
+    --b0: var(--t3x0);
+    --b1: var(--t3x1);
+    --b2: var(--t3x2);
+}
+</pre>
     </div>
 </body>
 </html>
