--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             font-size: 20px;
         }
 
-        /*::-webkit-scrollbar { width: 10px; }
+        ::-webkit-scrollbar { width: 10px; }
         ::-webkit-scrollbar-track { background-color: #333; }
-        ::-webkit-scrollbar-thumb { background-color: #666; border-radius: 5px; }*/
+        ::-webkit-scrollbar-thumb { background-color: #666; border-radius: 5px; }
 
         #page {
             width: 1050px;
